[ YC-61 ] Enhance lookup-query syntax to user column name spaces {columnName}